--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.18.2",
     "git": "^0.1.5",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
